# PureAPIkit

./: AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
doc/: storage-schema.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/store/: useApiClientStore.ts
src/types/: api.ts
testserver/: server.mjs  start-echo-server.bat
