[package]
name = "pureapikit"
version = "0.1.0"
description = "Minimal local API client"
authors = ["ZhuofanWu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pureapikit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
reqwest = { version = "0.12", default-features = false, features = ["brotli", "charset", "deflate", "gzip", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

